--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -5,4 +5,9 @@
 简单分析出几个原因：
 1.游戏难度原因决定黑魂并不会有太多单位同时战斗
 2.因为失误惩罚较大，玩家必须管制每一个boss 精英怪的前摇动作，来进行弹反，翻滚等操作
-3.因为boss体型原因，使用自由视角的话可能需要玩家自己一直保持一个仰视角
+3.因为boss体型原因，想要细致观察前摇需要保持仰视角 ，自由视角的话可能需要玩家自己一直保持一个仰视角，这样就没有足够精力集中在战斗上
+
+
+## 自由视角分析
+主要在于缩短弹簧臂还是偏移的决策，最简单的策略就是视角改变带来的必要修改使用缩短策略，人物位置移动带来的修改使用偏移的策略，简单来说就是输入优先级的问题，视角遥杆输入的优先级更高，强制缩短弹簧臂，
+以此达到想要的相机角度，人物移动并没有直接控制相机角度，所以自动偏移到合适的位置是比缩短弹簧臂更好的决策
