--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -22,3 +22,12 @@
 
 ### 自由视角分析
 主要在于缩短弹簧臂还是偏移的决策，最简单的策略就是视角改变带来的必要修改使用缩短策略，人物位置移动带来的修改使用偏移的策略，简单来说就是输入优先级的问题，视角遥杆输入的优先级更高，强制缩短弹簧臂， 以此达到想要的相机角度，人物移动并没有直接控制相机角度，所以自动偏移到合适的位置是比缩短弹簧臂更好的决策。
+
+首先魂3并没有像鬼泣5那样在特殊场景下视角拉很远的设计，猜测还是和游戏节奏有关，魂3的玩家和敌人动作速率都相对较慢，并不需要拉远视角，避免敌人冲出视角范围外。所以在自由视角的设计上还是较为简单直接。
+【此处有图】
+首先分析下视角设置
+操作镜头左右角度  鼠标或者遥感的输入绑定，颠倒即按照相反的方式绑定
+操纵镜头上下角度  同上
+·镜头上下角度重置 设置默认高度 可配置 魂3默认高度基本大致于胸部持平
+镜头运镜速度设置  既相机移动速度，为了更好体验，可以设置匀速的自由视角移动速度，和自定义函数控制锁定敌人后的运镜速度
+镜头回避： 前面提到过
