--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -22,11 +22,7 @@
 首先魂3并没有像鬼泣5那样在特殊场景下视角拉很远的设计，猜测还是和游戏节奏有关，鬼泣战斗节奏偏快，并且不管是敌人还是玩家都有多种快速位移的方式，如果视角过近，加上视角的频繁变化可能带来眩晕感，魂3的玩家和敌人动作速率都相对较慢，所以视角相对较劲并且固定，一般只有相机发生碰撞或者遮挡的情况下才会自适应视角，并且一般都是简单的拉近。所以在设计上还是较为简单明了。
 
 
-简单看一下游戏内视角设置，能了解
-、下
-、支持
-、那些
-、
+简单看一下游戏内视角设置，能了解下支持哪些功能
 【此处有图】
 首先分析下视角设置
 操作镜头左右角度  鼠标或者遥感的输入绑定，颠倒即按照相反的方式绑定
@@ -38,3 +34,12 @@
 
 ### 自由视角分析
 主要在于缩短弹簧臂还是偏移的决策，最简单的策略就是视角改变带来的必要修改使用缩短策略，人物位置移动带来的修改使用偏移的策略，简单来说就是输入优先级的问题，视角遥杆输入的优先级更高，强制缩短弹簧臂， 以此达到想要的相机角度，人物移动并没有直接控制相机角度，所以自动偏移到合适的位置是比缩短弹簧臂更好的决策。
+
+### 锁定视角的分析
+常见的锁定视角实现思路透视通过获取对象引用，以此来通过引用中的位置信息来更新相机视角和人物朝向。
+
+#### 获取引用
+获取引用或者说选取敌人，选取哪个敌人是首先要做的。我们假设我们有一个当前场景或者周围一定距离敌人的list列表，而我们要做的就是制定选取策略。
+
+##### 基本的是
+
