--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -44,10 +44,14 @@
 ##### 基本的剔除策略
 - 视口剔除 将世界坐标转化为主相机的适口坐标，设置最大适口距离，将不再视口距离内和视口距离超出设置的最大视口距离的敌人筛除。
 - 遮挡剔除 将被遮挡的敌人剔除，可以通过射线检测判断是否发生遮挡，即以摄像机位置和敌人位置通过射线检测，考虑到魂3会有体型较大的boss，会有半遮挡的情况，如果我们有物体刚好遮挡到敌人的中心点，其他地方都没被遮挡，导致敌人被剔除，这样的情况是我们要避免的，可以提高检测点数量，使用敌人包围盒的八个定点进行检测，可以配置当几个点检测到遮挡后便剔除。
+- 最后我们就将得到了剔除后的待选择数组canSelectedList
 
 ##### 精准的选取策略
 - 优先级排序 为了选取到我们希望锁定的敌人，我们需要考虑两点，一点是敌人和我们的相对距离，因为离我们越近代表威胁越大，一点是敌人在屏幕坐标系位置是否接近屏幕中心点，因为从玩家的操作逻辑来说，玩家肯定是先使用自由视角的控制先将视角调整到一个大致位置，再使用锁定系统精确选取。通过自定义函数传入这两个数据，通过获取到的优先级数据，并以此为排序标准从大到小排序。
 如何设计这个优先级函数呢？
-可以设置一个百分比，相对距离 * 百分比 + 屏幕中心距离 * (1 - 百分比)
-但是因为两个数据单位不同，一个是单位距离，一个是像素距离，直接使用上述公式肯定会出问题，真要使用这样的方式起计算可能需要反复的调整百分比设置，以及在公式中加入一些常量，来直观的将两种决策因素量化表示出来
+可以设置一个相对距离的相关性百分比，优先级 =  相对距离 * 百分比 + 距离屏幕中心距离 * (1 - 百分比)
+但是因为两个数据单位不同，一个是单位距离，一个是像素距离，直接使用上述公式肯定会出问题，真要使用这样的方式起计算可能需要反复的调整百分比设置，以及在公式中加入一些常量，来直观的将两种决策因素量化表示出来, 并以此对我们的canSelectedList进行优先级排序。
+- 初次锁定 初次锁定是发生在战斗开始，所以我们第一次锁定直接锁定优先级最高的敌人，即canSelectedList中第一个敌人，当然如果战斗中玩家也可以通过
+
+
 
