--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -51,7 +51,8 @@
 如何设计这个优先级函数呢？
 可以设置一个相对距离的相关性百分比，优先级 =  相对距离 * 百分比 + 距离屏幕中心距离 * (1 - 百分比)
 但是因为两个数据单位不同，一个是单位距离，一个是像素距离，直接使用上述公式肯定会出问题，真要使用这样的方式起计算可能需要反复的调整百分比设置，以及在公式中加入一些常量，来直观的将两种决策因素量化表示出来, 并以此对我们的canSelectedList进行优先级排序。
-- 初次锁定 初次锁定是发生在战斗开始，所以我们第一次锁定直接锁定优先级最高的敌人，即canSelectedList中第一个敌人，当然如果战斗中玩家也可以通过
+- 初次锁定 初次锁定是发生在战斗开始，所以我们第一次锁定直接锁定优先级最高的敌人，即canSelectedList中第一个敌人，如果当前锁定经过一段时间后又不是威胁最大的了，我们可以通过解除锁定重新选取的方式，将锁定切换到我们优先级最高的敌人
+- 锁定切换 首先我们要明确数组中的排序是实时的吗，根据经验肯定是要实时，需要和当前敌人对我们的威胁度保持一致，切换和重新锁定逻辑有些不同，重新锁定相当与脱战后又重新战斗，所以我们可以直接锁定优先级最高的，但是锁定切换是发生在战斗中，我们不能强迫玩家锁定谁，需要给玩家一定的自由度，当我们锁定的敌人数组位置不再是第一位，我们想切换时，那么是向前移动还是想后面移动呢
 
 
 
