--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -6,21 +6,25 @@
 那么常见的视角控制有哪些？
 1. 固定视角：在早些时候游戏通常是固定视角，即使是《生化危机》这样射击且注重沉浸感的游戏也都是被迫使用固定视角的，很多时候进行探索时，都是通过像房间摄像头的固定视角进行探索的，个人感觉体验感上最大的不适就是缺失方向感，可能进入了一个新的视角空间，但又因为方向迷失又回到了原来的视角空间，后续像《鬼泣4》这样添加多个固定机位，可以进行切换的方式，感觉并没有带来多大改进。
 2. 自由视角：自由视角可以使用鼠标或者遥感自由的控制视角，解决了固定视角带来的问题，但是过多的自由也带来了操作问题，玩家无法同时丝滑的控制人物移动和视角移动，所以出现了TPS游戏的视角控制，即将人物朝向和视角控制绑定，对于纯TPS射击游戏这样没有太大问题，但是如果加入近战的元素，比如《SD敢达》一款机战类型的游戏，因为并没有完善的锁定机制，近距离砍中敌人比远距离射击更加的难，所以act一般并不会使用这样的方式，而是视角和朝向控制分离控制，辅以锁定系统或是跟踪视角来控制相机。
-3. 锁定机制：锁定机制在act中比较常见，因为不管是固定视角还是自由视角，act中我们的相机都会处在一个能拍摄到玩家和敌人的合适的位置，想要实现有趣的战斗系统就需要引入锁定机制，可以实现像鬼泣5依赖方向遥感搓招的效果，并且锁定敌人后，我们的视角势必需要自动调整到一个适合我们开始战斗的位置。但锁定机制也不是必须的，也有像《DMC鬼泣》的方式，使用固定视角以及攻击时自动向最近的敌人攻击方式，放弃键位锁定，减低了上手难度，并且通过拉扯可以快速脱离战场核心，并不需要在键位锁定视角和自由视角中来回切换。
+3. 锁定机制：这里说的锁定机制是说的键位锁定，需要和自动锁定区分。锁定机制在act中比较常见，因为如果想避免割草无双的效果，那么就需要限制玩家的攻击范围，让玩家一个一个的解决敌人。锁定敌人后就代表此时我们非常需要战胜这个敌人，那么我们就需要进行视角的运镜 ，让我们的注意力集中到此单位上，所以开始锁定时我们的相机需要运镜到一个能拍摄到玩家和敌人的合适的位置，运镜过程中也要尽可能平滑，锁定机制也可以实现像鬼泣5依赖方向摇杆搓招的效果，给我们带来更丰富硬核的战斗体验。但锁定机制也不是必须的，如果锁定系统做的不好，频繁的视角切换会让玩家头晕目眩，因此也出现了像《DMC鬼泣》的方式，使用固定追踪视角以及自动锁定的方式，放弃键位锁定，减低了上手难度，而且通过拉扯可以快速脱离战场核心。
 
+可以确定的几点，锁定系统面对多单位混战时体验并不好，因为并不是每一次锁定切换都是快速精准的，并且锁定带来的视角变换如果又不自然平滑，可能会让一部分玩家头晕目眩。并且锁定视角改变时，键位的相对方向的改变，在带来华丽的连招的同时，也提高了玩家的上手难度，就算是老手也有可能失误，所以锁定系统并不是每一个act都必须的。
 
-可以确定的几点，鬼泣的战斗系统依赖锁定的方向，在依赖方向键搓招时，键位可能会发生改变，并且因为锁定系统的原因，面对多单位混战时体验并不好，原因就是锁定改变时，键位的相对方向的改变，所以锁定机制在带来华丽的连招的同时，在多单位战斗中体验却较差，所以自由视角加锁定的方式不一定是更先进的，像《鬼泣DMC》《忍龙》等其他act也有使用固定视角，两者应该是一个各有优缺点的过程，比如鬼泣正代的锁定带来的是华丽的连招，缺点是多单位体验并不好，鬼泣DMC固定视角是整体流程和多单位的爽快战斗，缺点是操作难度较低且没有太好的办法提高。
-
-
-那么黑魂使用自由加锁定的原因是什么呢，明明他和鬼泣风格相差甚远。 
+那么黑魂使用自由加锁定的原因是什么呢
 简单分析出几个原因： 
-1. 游戏难度原因决定黑魂并不会有太多单位同时战斗 
-2. 因为失误惩罚较大，玩家必须管制每一个boss 精英怪的前摇动作，来进行弹反，翻滚等操作
-3. 因为boss体型原因，想要表现boss压迫力并且观察前摇需要保持仰视角 ，自由视角的话可能需要玩家自己一直保持一个仰视角，这样就没有足够精力集中在战斗上。
+
+1. 对于魂3而言，因为玩家的硬直条基本上和普通单位没有区别，并且每一个敌人的攻击力都比较高，所以势必不会出现太多单位同时让你应对的情况
+
+2.  魂3相对其他游戏而言，失误惩罚更大，稍有不慎可能就坐篝火重新开始。所以面对不同敌人时，锁定系统可以给我们带来更及时的敌人反馈，可以熟练的抓住敌人的攻击时机进行弹反，背刺等操作。
+
+3.  在主打的boss战中使用锁定系统，玩家也可以通过视角锁定获取更多的即时信息，更容易灵活的使用翻滚躲避boss的攻击。
+
+4. 为了提高boss给玩家带来的影响力和压迫力，魂3在在使用锁定系统时，会强制将视角运镜到一个肩部视角，和鬼泣5中锁定后的运镜相比，这样的视角距离玩家更近，在锁定一些体型较大的敌人时，通过这样的仰视角观察可以带来极大的压迫力。
+
+   
 
 ## 下面开始正式的魂3锁定系统的反推
 首先魂3并没有像鬼泣5那样在特殊场景下视角拉很远的设计，猜测还是和游戏节奏有关，鬼泣战斗节奏偏快，并且不管是敌人还是玩家都有多种快速位移的方式，如果视角过近，加上视角的频繁变化可能带来眩晕感，魂3的玩家和敌人动作速率都相对较慢，所以视角相对较劲并且固定，一般只有相机发生碰撞或者遮挡的情况下才会自适应视角，并且一般都是简单的拉近。所以在设计上还是较为简单明了。
-
 
 简单看一下游戏内视角设置，能了解下支持哪些功能
 【此处有图】
@@ -32,8 +36,6 @@
 镜头回避： 前面提到过
 
 
-### 自由视角分析
-主要在于缩短弹簧臂还是偏移的决策，最简单的策略就是视角改变带来的必要修改使用缩短策略，人物位置移动带来的修改使用偏移的策略，简单来说就是输入优先级的问题，视角遥杆输入的优先级更高，强制缩短弹簧臂， 以此达到想要的相机角度，人物移动并没有直接控制相机角度，所以自动偏移到合适的位置是比缩短弹簧臂更好的决策。
 
 ### 锁定视角的分析
 常见的锁定视角实现思路透视通过获取对象引用，以此来通过引用中的位置信息来更新相机视角和人物朝向。
@@ -48,11 +50,27 @@
 
 ##### 精准的选取策略
 - 优先级排序 为了选取到我们希望锁定的敌人，我们需要考虑两点，一点是敌人和我们的相对距离，因为离我们越近代表威胁越大，一点是敌人在屏幕坐标系位置是否接近屏幕中心点，因为从玩家的操作逻辑来说，玩家肯定是先使用自由视角的控制先将视角调整到一个大致位置，再使用锁定系统精确选取。通过自定义函数传入这两个数据，通过获取到的优先级数据，并以此为排序标准从大到小排序。
-如何设计这个优先级函数呢？
-可以设置一个相对距离的相关性百分比，优先级 =  相对距离 * 百分比 + 距离屏幕中心距离 * (1 - 百分比)
-但是因为两个数据单位不同，一个是单位距离，一个是像素距离，直接使用上述公式肯定会出问题，真要使用这样的方式起计算可能需要反复的调整百分比设置，以及在公式中加入一些常量，来直观的将两种决策因素量化表示出来, 并以此对我们的canSelectedList进行优先级排序。
+  如何设计这个优先级函数呢？
+  可以设置一个相对距离的相关性百分比，优先级 =  相对距离 * 百分比 + 距离屏幕中心距离 * (1 - 百分比)
+  但是因为两个数据单位不同，一个是单位距离，一个是像素距离，直接使用上述公式肯定会出问题，真要使用这样的方式起计算可能需要反复的调整百分比设置，以及在公式中加入一些常量，来直观的将两种决策因素量化表示出来, 并以此对我们的canSelectedList进行优先级排序。
+
 - 初次锁定 初次锁定是发生在战斗开始，所以我们第一次锁定直接锁定优先级最高的敌人，即canSelectedList中第一个敌人，如果当前锁定经过一段时间后又不是威胁最大的了，我们可以通过解除锁定重新选取的方式，将锁定切换到我们优先级最高的敌人
-- 锁定切换 首先我们要明确数组中的排序是实时的吗，根据经验肯定是要实时，需要和当前敌人对我们的威胁度保持一致，切换和重新锁定逻辑有些不同，重新锁定相当与脱战后又重新战斗，所以我们可以直接锁定优先级最高的，但是锁定切换是发生在战斗中，我们不能强迫玩家锁定谁，需要给玩家一定的自由度，当我们锁定的敌人数组位置不再是第一位，我们想切换时，那么是向前移动还是想后面移动呢
+
+- 锁定切换 锁定切换一般有两种
+
+  魂3使用的是摇杆切换，即使用摇杆的输入方向切换锁定敌人，这样的好处是可以避免视角移动的角度过大，带来不好的体验，在具体的实现上，可以使用我们之前剔除出的数组，使用里面的数据组织出一个四叉树的结构，这样根据我们当前锁定点和摇杆输入方向切换敌人，但是又一个问题需要我们考虑，我们需要设置切换的灵敏度，因为切换这个操作是一个一次性的操作，并不需要像移动那样每帧检测，比较简单的办法是设置一个冷却时间，让我们不能短时间连续切换，但有可能还是过于灵敏，那就是加入输入持续时间的检测，比如在摇杆向右保持了0.2秒的时间才会去进行切换的操作。摇杆切换也可以适配到PC用鼠标上，对于灵敏度问题可以使用相同办法解决。
+
+  第二种是按键切换，即使用单一按键进行切换，一般是摇杆被占用情况下使用。按键切换遇到的问题会比较多，因为不能精准的切换，就需要简单猜测以下玩家的切换心里，首先确定了初次锁定的肯定是优先级当前优先级最高的单位，那么想切换的话，肯定是玩家觉得有更具威胁的敌人，但是因为算法的原因我们把它排到数组靠后的位置了，那么在保证我们canSelectedlist数组是实时更新的，那我们只需要正向遍历就ok了，当遍历到最后再将指针移到数组头，锁定第一个敌人。 那么有没有其他方法再优化下，也可以设置一个方向标记值，遇到第一个敌人是标记值变为向后，遇到最后一个敌人时，标记值防线变为向前遍历。
+
+##### 锁定丢失
+
+我们还需要思考在什么情况下取消锁定，如果每一次都让玩家自己取消的话，那就太繁琐了。
+
+- 超出锁定距离  因为视角朝向锁定敌人的原因，一般熟练玩家想逃跑到安全距离时，会先手动取消锁定，在逃跑时使用摇杆将摄像机拉回来看自己的套跑路线，但一个新玩家可能会慌张在开着锁定时，一直往后跑，然后撞到墙上没地方跑了，或者跑到了更危险的地方惊动更多的敌人，所以我们需要设置一个锁定范围，超出这个距离后帮助
+
+
+
+
 
 
 
