--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -66,7 +66,9 @@
 
 我们还需要思考在什么情况下取消锁定，如果每一次都让玩家自己取消的话，那就太繁琐了。
 
-- 超出锁定距离  因为视角朝向锁定敌人的原因，一般熟练玩家想逃跑到安全距离时，会先手动取消锁定，在逃跑时使用摇杆将摄像机拉回来看自己的套跑路线，但一个新玩家可能会慌张在开着锁定时，一直往后跑，然后撞到墙上没地方跑了，或者跑到了更危险的地方惊动更多的敌人，所以我们需要设置一个锁定范围，超出这个距离后帮助
+- 超出锁定距离  因为视角朝向锁定敌人的原因，一般熟练玩家想逃跑到安全距离时，会先手动取消锁定，在逃跑时使用摇杆将摄像机拉回来看自己的套跑路线，但一个新玩家可能会慌张在开着锁定时，一直往后跑，然后撞到墙上没地方跑了，或者跑到了更危险的地方惊动更多的敌人，所以我们需要设置一个锁定范围，超出这个距离后帮助玩家解除锁定。
+- 被锁定单位死亡 从设置中我们就可以看到魂3支持当前锁定单位死亡后自动锁定当前优先级最高的敌人。
+- 锁定单位超出视野  此处需要和超出距离区分下，第一种是敌人和玩家的距离超出了能锁定的最大范围，也就是在接触锁定前敌人还一直在我们视野内的，而超出视野，是因为敌人的移动速度过快，相机的运镜速度跟不上，或者是敌人跳了起来超出了相机的最大仰角
 
 
 
