--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -79,7 +79,7 @@
 
   
 
-  
+  ![image](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/gif/boss%E6%8A%95%E6%8E%B7%E6%94%BB%E5%87%BB.gif)
 
 ##### 锁定后的相机变化
 
