--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -70,15 +70,20 @@
 
 - 被锁定单位死亡 从设置中我们就可以看到魂3支持当前锁定单位死亡后自动锁定当前优先级最高的敌人。
 
-- 锁定单位超出视野  此处需要和超出距离区分下，第一种是敌人和玩家的距离超出了能锁定的最大范围，也就是在接触锁定前敌人还一直在我们视野内的，而超出视野，是因为敌人的移动速度过快，相机的运镜速度跟不上，或者是敌人跳了起来超出了相机的最大仰角。
+- 锁定单位超出视野  此处需要和超出距离区分下，第一种是敌人和玩家的距离超出了能锁定的最大范围，也就是在接触锁定前敌人还一直在我们视野内的，而超出视野，是因为敌人的移动速度过快，相机的运镜速度跟不上，或者是敌人跳了起来超出了相机的最大仰角。比如古达的跳劈动作，因为高度原因到了一个我们无法仰起的高度，就会丢失视野，解除锁定，更加常见的掉下悬崖也是因为超出了我们观察视野所以解除了锁定。
+
+  ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_19%2023_24_22.png?raw=true)
 
 - 触发qte等固定动画效果   当玩家触发被刺等qte后，锁定会被解除。初步分析原因是因为，处决是一个风险收益并存的操作，收益是更多的伤害，风险则包括为了处决而去绕后弹反等触发前风险，还包括触发后，因为我们播放动画时暂停玩家输入，在无敌帧结束后我们会处于一个很危险的状态，可能会被多个单位包围起来，需要快速脱离战场，所以解除锁定的内在逻辑同上一条。
+
+  ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E7%94%B5%E5%BD%B1%E5%92%8C%E7%94%B5%E8%A7%86%202022_2_20%2017_59_54.png?raw=true)
 
 
 - boss的特殊攻击 有些boss会有一些特殊的投掷攻击，在特殊攻击时也会取消锁定。
 
   ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E7%94%B5%E5%BD%B1%E5%92%8C%E7%94%B5%E8%A7%86%202022_2_20%2017_39_39.png?raw=true)
 
+- 总的来说 锁定系统是游戏过程中最常用的一个控制相机运镜的系统，当其他系统比如qte系统需要获取摄像机的控制权时，锁定系统就会先解除锁定交出控制权，像处决系统和boss的投掷攻击都是需要获取摄像机控制权，在播放固定动画的同时进行运镜。
 
 #####  相机的移动范围
 
