--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -85,6 +85,18 @@
 
 - 总的来说 锁定系统是游戏过程中最常用的一个控制相机运镜的系统，当其他系统比如qte系统需要获取摄像机的控制权时，锁定系统就会先解除锁定交出控制权，像处决系统和boss的投掷攻击都是需要获取摄像机控制权，在播放固定动画的同时进行运镜。
 
+
+
+##### 根据锁定相机朝向的改变
+
+首先根据观察，在自由视角没有锁定的情况下，相机LookAt是锁定在大概人物的肩部位置，和人物有一个常规的弹簧轴距离，可以通过摇杆输入改变控制相机围绕人物运镜，发生遮挡和碰撞自动减少这个距离确保不被遮挡。
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_20%2019_22_56.png?raw=true)
+
+相机的简易位置
+
+
+
 #####  相机的移动范围
 
 
