--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -89,13 +89,19 @@
 
 ##### 根据锁定相机朝向的改变
 
-首先根据观察，在自由视角没有锁定的情况下，相机LookAt是锁定在大概人物的肩部位置，和人物有一个常规的弹簧轴距离，可以通过摇杆输入改变控制相机围绕人物运镜，发生遮挡和碰撞自动减少这个距离确保不被遮挡。
+首先根据观察，在自由视角没有锁定的情况下，相机LookAt是锁定在大概人物的肩部位置，和人物有一个常规的弹簧轴距离，可以通过摇杆输入改变控制相机围绕人物运镜，发生遮挡和碰撞自动减少这个距离确保不被遮挡。即相机朝向人物，相对位置也是以人物位父物体的相对位置。
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_20%2019_22_56.png?raw=true)
 
-相机的简易位置
+相机的简易位置模型
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/2022-02-20%20(5).png?raw=true)
 
 
+
+当进入锁定模式后，相机朝向锁定目标，位置任然以玩家自身为父物体的相对位置，这一点在鬼泣中比较明显
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/2022-02-20%20(8).png?raw=true)
 
 #####  相机的移动范围
 
