--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -10,7 +10,7 @@
 
 可以确定的几点，锁定系统面对多单位混战时体验并不好，因为并不是每一次锁定切换都是快速精准的，并且锁定带来的视角变换如果又不自然平滑，可能会让一部分玩家头晕目眩。并且锁定视角改变时，键位的相对方向的改变，在带来华丽的连招的同时，也提高了玩家的上手难度，就算是老手也有可能失误，所以锁定系统并不是每一个act都必须的。
 
-那么黑魂使用自由加锁定的原因是什么呢
+那么黑魂使锁定机制的作用
 简单分析出几个原因： 
 
 1. 对于魂3而言，因为玩家的硬直条基本上和普通单位没有区别，并且每一个敌人的攻击力都比较高，所以势必不会出现太多单位同时让你应对的情况
@@ -99,9 +99,25 @@
 
 
 
-当进入锁定模式后，相机朝向锁定目标，位置任然以玩家自身为父物体的相对位置，这一点在鬼泣中比较明显
+当进入锁定模式后，相机朝向锁定目标，位置任然以玩家自身为父物体的相对位置
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/2022-02-20%20(8).png?raw=true)
+
+此处魂3做的相对简单，会直接锁定视角，鬼泣则在锁定模式下仍然可以进行锁定模式下的运镜，处理方式是以人物本身的圆形运镜轨道和敌人的圆形运镜轨道进行混合，实现一个椭圆的运镜轨道。
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/Devil%20May%20Cry%205%202022_2_20%2021_02_08.png?raw=true)
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/Devil%20May%20Cry%205%202022_2_20%2021_02_38.png?raw=true)
+
+
+
+##### 相机的遮挡解决
+
+1、选择拉近镜头靠近角色，通过从角色朝镜头打一条射线检测最近的碰撞点位置，即为拉近镜头的位置，该方法极端情况可能会出现角色紧挨着墙，这时候镜头就会挤进角色内部，一般会对角色进行隐藏以保证视野，但对画面显示就不大友好。
+
+2、选择隐藏遮挡物，比如将整面墙隐藏，但会显得比较突兀，前一秒还在后一秒就没了，折中的方式是半透明遮挡物，反向思维则是显示墙后面的角色的轮廓线，各有优缺点。
+
+3、在发现遮挡的时候，按照预先设定的一些逻辑去寻找新的机位，比如当发现正面视角遮挡，则尝试查找侧面顶部背后等视角，依照权重划分去寻找合适的位置。
 
 #####  相机的移动范围
 
