--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -21,6 +21,8 @@
 
 4. 为了提高boss给玩家带来的影响力和压迫力，魂3在在使用锁定系统时，会强制将视角运镜到一个肩部视角，和鬼泣5中锁定后的运镜相比，这样的视角距离玩家更近，在锁定一些体型较大的敌人时，通过这样的仰视角观察可以带来极大的压迫力。
 
+5. 镜头较远会带来宽阔的视角，如果有着很好用的范围aoe，就像之前的《战神》系列游戏那样带来一个打十个的爽快感，但明显和魂3不符合，所以使用了较近的第三人称越肩视角，玩家的视野范围变小了，才容易设计更多的墙角杀。
+
    
 
 ## 下面开始正式的魂3锁定系统的反推
@@ -99,11 +101,13 @@
 
 
 
-当进入锁定模式后，相机朝向锁定目标，位置任然以玩家自身为父物体的相对位置
+当进入锁定模式后，相机朝向锁定目标，位置任然以玩家自身为父物体的相对位置，并且此时禁止了又摇杆输入，不能进行运镜。
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/2022-02-20%20(8).png?raw=true)
 
-此处魂3做的相对简单，会直接锁定视角，鬼泣则在锁定模式下仍然可以进行锁定模式下的运镜，处理方式是以人物本身的圆形运镜轨道和敌人的圆形运镜轨道进行混合，实现一个椭圆的运镜轨道。
+此处魂3做的相对简单，会直接锁定视角无法运镜，鬼泣则在锁定模式下仍然可以进行运镜，处理方式是以人物本身的圆形运镜轨道和敌人的圆形运镜轨道进行混合，实现一个椭圆的运镜轨道。
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E6%97%A0%E6%A0%87%E9%A2%98.png?raw=true)
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/Devil%20May%20Cry%205%202022_2_20%2021_02_08.png?raw=true)
 
