--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -4,53 +4,62 @@
 视角控制有多种方式，不同的风格游戏也适用于不同的视角控制，视角控制不仅是直接于游戏流程和战斗相关，并且巧妙的视角控制也可以帮助我们在技术上进行优化，节省资源。
 丝滑流畅的视角控制系统，是让玩家有耐心玩下去的关键，相机视角位置的细微偏差，都有可能带来致命的负面体验。
 那么常见的视角控制有哪些？
-1. 固定视角：在早些时候游戏通常是固定视角，即使是《生化危机》这样射击且注重沉浸感的游戏也都是被迫使用固定视角的，很多时候进行探索时，都是通过像房间摄像头的固定视角进行探索的，个人感觉体验感上最大的不适就是缺失方向感，可能进入了一个新的视角空间，但又因为方向迷失又回到了原来的视角空间，后续像《鬼泣4》这样添加多个固定机位，可以进行切换的方式，感觉并没有带来多大改进。
-2. 自由视角：自由视角可以使用鼠标或者遥感自由的控制视角，解决了固定视角带来的问题，但是过多的自由也带来了操作问题，玩家无法同时丝滑的控制人物移动和视角移动，所以出现了TPS游戏的视角控制，即将人物朝向和视角控制绑定，对于纯TPS射击游戏这样没有太大问题，但是如果加入近战的元素，比如《SD敢达》一款机战类型的游戏，因为并没有完善的锁定机制，近距离砍中敌人比远距离射击更加的难，所以act一般并不会使用这样的方式，而是视角和朝向控制分离控制，辅以锁定系统或是跟踪视角来控制相机。
-3. 锁定机制：这里说的锁定机制是说的键位锁定，需要和自动锁定区分。锁定机制在act中比较常见，因为如果想避免割草无双的效果，那么就需要限制玩家的攻击范围，让玩家一个一个的解决敌人。锁定敌人后就代表此时我们非常需要战胜这个敌人，那么我们就需要进行视角的运镜 ，让我们的注意力集中到此单位上，所以开始锁定时我们的相机需要运镜到一个能拍摄到玩家和敌人的合适的位置，运镜过程中也要尽可能平滑，锁定机制也可以实现像鬼泣5依赖方向摇杆搓招的效果，给我们带来更丰富硬核的战斗体验。但锁定机制也不是必须的，如果锁定系统做的不好，频繁的视角切换会让玩家头晕目眩，因此也出现了像《DMC鬼泣》的方式，使用固定追踪视角以及自动锁定的方式，放弃键位锁定，减低了上手难度，而且通过拉扯可以快速脱离战场核心。
 
-可以确定的几点，锁定系统面对多单位混战时体验并不好，因为并不是每一次锁定切换都是快速精准的，并且锁定带来的视角变换如果又不自然平滑，可能会让一部分玩家头晕目眩。并且锁定视角改变时，键位的相对方向的改变，在带来华丽的连招的同时，也提高了玩家的上手难度，就算是老手也有可能失误，所以锁定系统并不是每一个act都必须的。
+1. 固定视角：在早些时候游戏通常是固定视角，即使是《生化危机》这样射击且注重沉浸感的游戏也都是被迫使用固定视角的，很多时候进行探索时，都是通过像房间摄像头的固定视角进行探索的，个人感觉体验感上最大的不适就是缺失方向感，可能进入了一个新的视角空间，但又因为方向迷失又回到了原来的视角空间，后续像《鬼泣4》这样添加多个固定机位，可以进行切换的方式，感觉并没有带来多大改进。
+2. 自由视角：自由视角可以使用鼠标或者遥感自由的控制视角，解决了固定视角带来的问题，但是过多的自由也带来了操作问题，玩家无法同时丝滑的控制人物移动和视角移动，所以出现了TPS游戏的视角控制，即将人物朝向和视角控制绑定，对于纯TPS射击游戏这样没有太大问题，但是如果加入近战的元素，比如《SD敢达》一款机战类型的游戏，因为并没有完善的锁定机制，近距离砍中敌人比远距离射击更加的难，所以有些情况下会引入下面要说的锁定机制。
+3. 锁定机制：这里说的锁定机制是说的键位锁定，需要和自动锁定和黏性方向区分。锁定机制在act中比较常见，因为如果想避免割草无双的效果，那么就需要限制玩家的攻击范围和视角范围，让玩家不能再一次解决多个敌人。锁定敌人后就代表此时我们非常需要战胜这个敌人，那么我们就需要进行视角的运镜 ，让我们的注意力集中到此单位上，所以开始锁定时我们的相机需要运镜到一个能拍摄到玩家和敌人的合适的位置，运镜过程中也要尽可能平滑，锁定机制也可以实现像鬼泣5依赖方向摇杆搓招的效果，给我们带来更丰富硬核的战斗体验。但锁定机制也不是必须的，如果锁定系统做的不好，频繁的视角切换会让玩家头晕目眩，因此也出现了像《DMC鬼泣》的方式，使用固定追踪视角以及自动锁定的方式，放弃键位锁定，减低了上手难度，而且通过拉扯可以快速脱离战场核心。
+
+可以确定的几点，锁定系统面对多单位混战时体验并不好，因为并不是每一次锁定切换都是快速精准的，并且锁定带来的视角变换如果又不自然平滑，可能会让一部分玩家头晕目眩。并且像鬼泣5锁定视角改变时，键位的相对方向也会改变，在带来华丽的连招的同时，也提高了玩家的上手难度，就算是老手也有可能失误，所以锁定系统并不是每一个act都必须的。
 
 那么黑魂使锁定机制的作用
 简单分析出几个原因： 
 
 1. 对于魂3而言，因为玩家的硬直条基本上和普通单位没有区别，并且每一个敌人的攻击力都比较高，所以势必不会出现太多单位同时让你应对的情况
 
-2.  魂3相对其他游戏而言，失误惩罚更大，稍有不慎可能就坐篝火重新开始。所以面对不同敌人时，锁定系统可以给我们带来更及时的敌人反馈，可以熟练的抓住敌人的攻击时机进行弹反，背刺等操作。
+2.  魂3相对其他游戏而言，失误惩罚更大，稍有不慎可能就坐篝火重新开始。所以面对不同敌人时，锁定系统可以给我们带来更及时的敌人反馈带来更多的即时信息，可以熟练的抓住敌人的攻击时机进行弹反，背刺等操作。
 
-3.  在主打的boss战中使用锁定系统，玩家也可以通过视角锁定获取更多的即时信息，更容易灵活的使用翻滚躲避boss的攻击。
+3. 在魂4中我们经常会遇到体型较大的boss，如果像展现全貌就必须拉远相机，但这肯定不是我们想要的，所以魂3采用了锁定系统给我们带来了不同于正常情况下的视角体验，当解决完杂兵，最终面对boss时，视角仰起的变化会带来很大压迫力，并且为了持续这种体验，在锁定模式下，也并不能通过右摇杆进行运镜。
 
-4. 为了提高boss给玩家带来的影响力和压迫力，魂3在在使用锁定系统时，会强制将视角运镜到一个肩部视角，和鬼泣5中锁定后的运镜相比，这样的视角距离玩家更近，在锁定一些体型较大的敌人时，通过这样的仰视角观察可以带来极大的压迫力。
-
-5. 镜头较远会带来宽阔的视角，如果有着很好用的范围aoe，就像之前的《战神》系列游戏那样带来一个打十个的爽快感，但明显和魂3不符合，所以使用了较近的第三人称越肩视角，玩家的视野范围变小了，才容易设计更多的墙角杀。
+4. 镜头较远会带来宽阔的视角，如果有着很好用的范围aoe，就像之前的《战神》系列游戏那样带来一个打十个的爽快感，但明显和魂3不符合，所以使用了较近的第三人称越肩视角，玩家的视野范围变小了，才容易设计更多的墙角杀。并且过于宽阔的视角范围，会给玩家一种操作玩具的感觉，沉浸感太低，而在魂3中，找到了一个折中点，即有第三人称的叙述感，给我们讲好一个故事，也在boss战中通过仰角的设置，加强boss压迫感，以此加强玩家的沉浸感。
 
    
 
 ## 下面开始正式的魂3锁定系统的反推
-首先魂3并没有像鬼泣5那样在特殊场景下视角拉很远的设计，猜测还是和游戏节奏有关，鬼泣战斗节奏偏快，并且不管是敌人还是玩家都有多种快速位移的方式，如果视角过近，加上视角的频繁变化可能带来眩晕感，魂3的玩家和敌人动作速率都相对较慢，所以视角相对较劲并且固定，一般只有相机发生碰撞或者遮挡的情况下才会自适应视角，并且一般都是简单的拉近。所以在设计上还是较为简单明了。
+首先魂3并没有像鬼泣5那样在特殊场景下视角拉很远的设计，原因上文分析过，魂3并不需要广阔的视角和战斗系统所匹配，因此他可以做的更接近第一视角，并且鬼泣5中不管是敌人还是玩家都有多种快速位移的方式，需要较远的视角，加避免屏幕的频繁变化带来的眩晕感，魂3的玩家和敌人动作速率都相对较慢，所以视角可以做的更靠近第一人称，为boss战铺垫。
 
 简单看一下游戏内视角设置，能了解下支持哪些功能
-【此处有图】
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_20%2021_40_45.png?raw=true)
+
 首先分析下视角设置
 操作镜头左右角度  鼠标或者遥感的输入绑定，颠倒即按照相反的方式绑定
 操纵镜头上下角度  同上
 ·镜头上下角度重置 设置默认高度 可配置 魂3默认高度基本大致于胸部持平
 镜头运镜速度设置  既相机移动速度，为了更好体验，可以设置匀速的自由视角移动速度，和自定义函数控制锁定敌人后的运镜速度
-镜头回避： 前面提到过
+镜头回避：后面会提到，即处理镜头遮蔽情况
 
+还有自动锁定和自动锁定切换等功能的设置
 
+此时简单了解了给玩家暴露的功能设置，可以以此切入，从开发者角度进行分析
 
-### 锁定视角的分析
-常见的锁定视角实现思路透视通过获取对象引用，以此来通过引用中的位置信息来更新相机视角和人物朝向。
+##### 获取初始对象引用列表
 
-#### 获取引用
-获取引用或者说选取敌人，选取哪个敌人是首先要做的。我们假设我们有一个当前场景或者周围一定距离敌人的list列表，而我们要做的就是制定选取策略。
+首先是我们数据的获取，比较耗费性能的是直接使用盒体检测，但是我们相信有更好的解法。
+
+因为我们获取的是初始列表，不需要特别精确，可以相信之前的游戏开发中，比如加载机制等可以给我们提供一个符合我们需求的数据，那么我们后续就只需要针对他进行处理。
 
 ##### 基本的剔除策略
-- 视口剔除 将世界坐标转化为主相机的适口坐标，设置最大适口距离，将不再视口距离内和视口距离超出设置的最大视口距离的敌人筛除。
+
+处理完后我们需要一些基本的数据剔除，剔除垃圾数据，只留下我们可以使用，可以进行锁定的数据。
+
+- 视口剔除 将世界坐标转化为主相机的适口坐标，设置最大适口距离，将不再视口距离内和视口距离超出设置的最大视口距离的敌人筛除，这样的好处是我们不会出现突然转身，视角迅速变化的情况，毕竟不是每个玩家都有fps的经验，避免此种情况带来的眩晕感。
 - 遮挡剔除 将被遮挡的敌人剔除，可以通过射线检测判断是否发生遮挡，即以摄像机位置和敌人位置通过射线检测，考虑到魂3会有体型较大的boss，会有半遮挡的情况，如果我们有物体刚好遮挡到敌人的中心点，其他地方都没被遮挡，导致敌人被剔除，这样的情况是我们要避免的，可以提高检测点数量，使用敌人包围盒的八个定点进行检测，可以配置当几个点检测到遮挡后便剔除。
 - 最后我们就将得到了剔除后的待选择数组canSelectedList
 
 ##### 精准的选取策略
+
+现在我们有了这个canSelectedList数组，他就是我们游戏中真正可以锁定到的一组数据，现在需要的是考虑我们的确切的选取策略。
+
 - 优先级排序 为了选取到我们希望锁定的敌人，我们需要考虑两点，一点是敌人和我们的相对距离，因为离我们越近代表威胁越大，一点是敌人在屏幕坐标系位置是否接近屏幕中心点，因为从玩家的操作逻辑来说，玩家肯定是先使用自由视角的控制先将视角调整到一个大致位置，再使用锁定系统精确选取。通过自定义函数传入这两个数据，通过获取到的优先级数据，并以此为排序标准从大到小排序。
   如何设计这个优先级函数呢？
   可以设置一个相对距离的相关性百分比，优先级 =  相对距离 * 百分比 + 距离屏幕中心距离 * (1 - 百分比)
@@ -60,23 +69,23 @@
 
 - 锁定切换 锁定切换一般有两种
 
-  魂3使用的是摇杆切换，即使用摇杆的输入方向切换锁定敌人，这样的好处是可以避免视角移动的角度过大，带来不好的体验，在具体的实现上，可以使用我们之前剔除出的数组，使用里面的数据组织出一个四叉树的结构，这样根据我们当前锁定点和摇杆输入方向切换敌人，但是又一个问题需要我们考虑，我们需要设置切换的灵敏度，因为切换这个操作是一个一次性的操作，并不需要像移动那样每帧检测，比较简单的办法是设置一个冷却时间，让我们不能短时间连续切换，但有可能还是过于灵敏，那就是加入输入持续时间的检测，比如在摇杆向右保持了0.2秒的时间才会去进行切换的操作。摇杆切换也可以适配到PC用鼠标上，对于灵敏度问题可以使用相同办法解决。
+  魂3使用的是摇杆切换，即使用摇杆的输入方向切换锁定敌人，这样的好处是可以避免视角移动的角度过大，带来不好的眩晕体验，在具体的实现上，可以使用我们之前剔除出的数组，使用里面的数据组织出一个四叉树的结构，这样根据我们当前锁定点和摇杆输入方向切换敌人，但是又一个问题需要我们考虑，我们需要设置切换的灵敏度，因为切换这个操作是一个一次性的操作，并不需要像移动那样每帧检测，比较简单的办法是设置一个冷却时间，让我们不能短时间连续切换，但有可能还是过于灵敏，那就是加入输入持续时间的检测，比如在摇杆向右保持了0.2秒的时间才会去进行切换的操作。摇杆切换也可以适配到PC用鼠标上，对于灵敏度问题可以使用相同办法解决。
 
-  第二种是按键切换，即使用单一按键进行切换，一般是摇杆被占用情况下使用。按键切换遇到的问题会比较多，因为不能精准的切换，就需要简单猜测以下玩家的切换心里，首先确定了初次锁定的肯定是优先级当前优先级最高的单位，那么想切换的话，肯定是玩家觉得有更具威胁的敌人，但是因为算法的原因我们把它排到数组靠后的位置了，那么在保证我们canSelectedlist数组是实时更新的，那我们只需要正向遍历就ok了，当遍历到最后再将指针移到数组头，锁定第一个敌人。 那么有没有其他方法再优化下，也可以设置一个方向标记值，遇到第一个敌人是标记值变为向后，遇到最后一个敌人时，标记值防线变为向前遍历。
+  第二种是按键切换，即使用单一按键进行切换，一般是摇杆被占用情况下使用。按键切换遇到的问题会比较多，因为不能精准的切换，就需要简单猜测以下玩家的切换心里，首先确定了初次锁定的肯定是优先级当前优先级最高的单位，那么想切换的话，肯定是玩家觉得有更具威胁的敌人，但是因为算法的原因我们把它排到数组靠后的位置了，那么在保证我们canSelectedlist数组是实时更新的，那我们只需要正向遍历就ok了，当遍历到最后再将指针移到数组头，锁定第一个敌人。 那么有没有其他方法再优化下，其实也可以设置一个方向标记值，遇到第一个敌人时标记值变为向后遍历，遇到最后一个敌人时，标记值防线变为向前遍历。
 
 ##### 锁定丢失
 
-我们还需要思考在什么情况下取消锁定，如果每一次都让玩家自己取消的话，那就太繁琐了。
+视角锁定后还需要思考在什么情况下取消锁定，如果每一次都让玩家自己取消的话，那就太繁琐了。
 
-- 超出锁定距离  因为视角朝向锁定敌人的原因，一般熟练玩家想逃跑到安全距离时，会先手动取消锁定，在逃跑时使用摇杆将摄像机拉回来看自己的套跑路线，但一个新玩家可能会慌张在开着锁定时，一直往后跑，然后撞到墙上没地方跑了，或者跑到了更危险的地方惊动更多的敌人，所以我们需要设置一个锁定范围，超出这个距离后帮助玩家解除锁定。
+- 超出锁定距离  因为视角朝向锁定敌人的原因，一般熟练玩家想逃跑到安全距离时，会先手动取消锁定，在逃跑时使用摇杆将摄像机拉回来看自己的套跑路线，但一个新玩家可能会慌张的在开着锁定时，一直往后跑，然后撞到墙上没地方跑了，或者跑到了更危险的地方惊动更多的敌人，所以我们需要设置一个锁定范围，超出这个距离后帮助玩家解除锁定。
 
-- 被锁定单位死亡 从设置中我们就可以看到魂3支持当前锁定单位死亡后自动锁定当前优先级最高的敌人。
+- 被锁定单位死亡  死亡后解除锁定每什么需要解释的，但是面临多个敌人时，我们解决了一个后还需要立马锁定下一个，以此提高我们的效率，这点我们可以设置当前锁定单位死亡后自动锁定当前优先级最高的敌人，并暴露给玩家设置。  
 
-- 锁定单位超出视野  此处需要和超出距离区分下，第一种是敌人和玩家的距离超出了能锁定的最大范围，也就是在接触锁定前敌人还一直在我们视野内的，而超出视野，是因为敌人的移动速度过快，相机的运镜速度跟不上，或者是敌人跳了起来超出了相机的最大仰角。比如古达的跳劈动作，因为高度原因到了一个我们无法仰起的高度，就会丢失视野，解除锁定，更加常见的掉下悬崖也是因为超出了我们观察视野所以解除了锁定。
+- 锁定单位超出视野  此处需要和超出锁定距离区分下，第一种是敌人和玩家的距离超出了能锁定的最大范围，也就是在接触锁定前敌人还一直在我们视野内的，而超出视野，是因为敌人的移动速度过快，相机的运镜速度跟不上，或者是敌人跳了起来超出了相机的最大仰角。比如古达的跳劈动作，因为高度原因到了一个我们无法仰起的高度，就会丢失视野，解除锁定，更加常见的掉下悬崖也是因为超出了我们观察视野所以解除了锁定。
 
   ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_19%2023_24_22.png?raw=true)
 
-- 触发qte等固定动画效果   当玩家触发被刺等qte后，锁定会被解除。初步分析原因是因为，处决是一个风险收益并存的操作，收益是更多的伤害，风险则包括为了处决而去绕后弹反等触发前风险，还包括触发后，因为我们播放动画时暂停玩家输入，在无敌帧结束后我们会处于一个很危险的状态，可能会被多个单位包围起来，需要快速脱离战场，所以解除锁定的内在逻辑同上一条。
+- 触发qte等固定动画效果   当玩家触发被刺等qte后，锁定会被解除。初步分析原因是因为，处决是一个风险收益并存的操作，收益是更多的伤害，风险则包括为了处决而去绕后弹反等触发前风险，还包括触发后，因为我们播放动画时暂停玩家输入，在无敌帧结束后我们会处于一个很危险的状态，可能会被多个单位包围起来，需要快速脱离战场，所以需要解除锁定，转为自由视角感觉逃跑到安全位置。
 
   ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E7%94%B5%E5%BD%B1%E5%92%8C%E7%94%B5%E8%A7%86%202022_2_20%2017_59_54.png?raw=true)
 
@@ -85,13 +94,11 @@
 
   ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E7%94%B5%E5%BD%B1%E5%92%8C%E7%94%B5%E8%A7%86%202022_2_20%2017_39_39.png?raw=true)
 
-- 总的来说 锁定系统是游戏过程中最常用的一个控制相机运镜的系统，当其他系统比如qte系统需要获取摄像机的控制权时，锁定系统就会先解除锁定交出控制权，像处决系统和boss的投掷攻击都是需要获取摄像机控制权，在播放固定动画的同时进行运镜。
-
-
+- 简单对qte和投掷攻击一起分析下，这两者都需要播放固定的无敌帧动画，并且通常和动画伴随的时相机运镜的特殊效果，所以猜测锁定系统的工作方式时，在正常锁定过程中，享有相机的控制权，控制着我们的视角，当有优先级更高的系统，比如玩家自身的qte系统，或者boss的投掷攻击触发时，锁定系统首先解除锁定交出我们相机的控制权，由这些系统尽心相机运镜的特殊效果，所以等播放完了我们会发现，不管敌人死没死，我们都解除了锁定。   
 
 ##### 根据锁定相机朝向的改变
 
-首先根据观察，在自由视角没有锁定的情况下，相机LookAt是锁定在大概人物的肩部位置，和人物有一个常规的弹簧轴距离，可以通过摇杆输入改变控制相机围绕人物运镜，发生遮挡和碰撞自动减少这个距离确保不被遮挡。即相机朝向人物，相对位置也是以人物位父物体的相对位置。
+首先根据观察，在自由视角没有锁定的情况下，相机LookAt是锁定在大概人物的肩部位置，和人物有一个常规的弹簧轴距离，可以通过摇杆输入改变控制相机围绕人物运镜，发生遮挡和碰撞自动拉近相机保不被遮挡。即相机朝向人物，相对位置也是以人物位父物体的相对位置。
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_20%2019_22_56.png?raw=true)
 
@@ -101,11 +108,11 @@
 
 
 
-当进入锁定模式后，相机朝向锁定目标，位置任然以玩家自身为父物体的相对位置，并且此时禁止了又摇杆输入，不能进行运镜。
+当进入锁定模式后，相机朝向锁定目标，位置仍然是以玩家自身为父物体的相对位置，并且此时禁止了又摇杆输入，不能进行运镜。
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/2022-02-20%20(8).png?raw=true)
 
-此处魂3做的相对简单，会直接锁定视角无法运镜，鬼泣则在锁定模式下仍然可以进行运镜，处理方式是以人物本身的圆形运镜轨道和敌人的圆形运镜轨道进行混合，实现一个椭圆的运镜轨道。
+此处魂3做的相对简单，会直接禁止右摇杆输入，锁定视角无法运镜，鬼泣则在锁定模式下仍然可以进行运镜，处理方式是以人物本身的圆形运镜轨道和敌人的圆形运镜轨道进行混合，实现一个椭圆的运镜轨道。
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E6%97%A0%E6%A0%87%E9%A2%98.png?raw=true)
 
@@ -117,16 +124,28 @@
 
 ##### 相机的遮挡解决
 
-1、选择拉近镜头靠近角色，通过从角色朝镜头打一条射线检测最近的碰撞点位置，即为拉近镜头的位置，该方法极端情况可能会出现角色紧挨着墙，这时候镜头就会挤进角色内部，一般会对角色进行隐藏以保证视野，但对画面显示就不大友好。
+之前在魂3的视角设置中就有一些关于相机遮挡的设置
 
-2、选择隐藏遮挡物，比如将整面墙隐藏，但会显得比较突兀，前一秒还在后一秒就没了，折中的方式是半透明遮挡物，反向思维则是显示墙后面的角色的轮廓线，各有优缺点。
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/DARK%20SOULS%20III%202022_2_20%2021_40_45.png?raw=true)
 
-3、在发现遮挡的时候，按照预先设定的一些逻辑去寻找新的机位，比如当发现正面视角遮挡，则尝试查找侧面顶部背后等视角，依照权重划分去寻找合适的位置。
+镜头规避就是在镜头发生遮挡时的自动处理
+
+1. 第一种是之间缩短距离，缩短弹簧轴长度，可以通过从角色朝镜头打一条射线检测最近的碰撞点位置，即为拉近镜头的位置，该方法极端情况可能会出现角色紧挨着墙，这时候镜头就会挤进角色内部，一般会对角色进行隐藏以保证视野，但对画面显示就不大友好。
+
+2. 选择隐藏遮挡物，比如将整面墙隐藏，但会显得比较突兀。
+
+3. 在发现遮挡的时候，按照预先设定的一些逻辑去寻找新的机位，比如当发现正面视角遮挡，则尝试查找侧面顶部背后等视角，这里只适用于自由视角，对相机位置要求不严格的情况下，进行自主的判断来进行简单的修正，如果在魂3的锁定模式下，相机视角被固定在玩家身后，这样的方式肯定是不合格的
 
 #####  相机的移动范围
 
+即人物在哪个范围内不会触发相机的跟随功能，这里拿unity中的Cinemachine举例子，人物在蓝色框内时，不会触发相机跟随功能。
 
-
-
+通过width，height两个变量控制屏幕范围大小。
 
 ![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/2022-02-20%20(1).png?raw=true)
+
+![](https://github.com/lhw23333/DarkSoul-DMC_ViewController/blob/main/%E5%9B%BE%E7%89%87/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220220215441.png?raw=true)
+
+## 总结
+
+总结下来魂3的视角和锁定系统相对简洁一些，并没有鬼泣5那样的运镜轨迹混合，在视角距离上比较固定，像鬼泣5，哪怕自由视角下，也会根据场景自动出现拉远和拉近的运镜表现，总的来说锁定系统是依赖于运镜的系统，而一款游戏的运镜和视角，也是玩家体验感的最直观反馈，简单的经验告诉我们，相机里人物越近，玩家的沉浸感越深，但是视角的抖动，旋转带来的眩晕问题都会很明显，所以再花哨的fps游戏，在这一点上也会严格限制玩家的移动方式，因此也不会出现第一人称的act游戏，而对第三人称而言，带来的叙事感能更好的帮助我们表现游戏剧情，帮助玩家和梳理，如果相机比较远视野宽阔，就可以容纳更多更炫酷的技能和战斗系统，不同游戏对两者都有不同的取舍，就像《战神4》和前作相比，放弃了比较传统的act远距离视角，大胆采用越肩视角，游戏中更是穿插大量的长镜头一镜到底等操作，是一次游戏电影化的尝试，引入了更多的运镜手法，而魂3或者说魂系列作为战神4的前辈，更多的是对除传统日式俯视角act以外的一次探索，而他也确实通过运镜视角的改变，带来了想要的体验感和boss压迫力，也给后辈留下许多参考，在新的时代下像有着更多的借鉴意义，因为现在开发一款相机的运镜系统和锁定系统，我们肯定要考虑到更复杂的需求场景和画面的表现力，因此从风格鲜明的前人之作中吸取经验加以提炼不失为一种好方法。
