--- a/视角系统拆解.md
+++ b/视角系统拆解.md
@@ -149,3 +149,7 @@
 ## 总结
 
 总结下来魂3的视角和锁定系统相对简洁一些，并没有鬼泣5那样的运镜轨迹混合，在视角距离上比较固定，像鬼泣5，哪怕自由视角下，也会根据场景自动出现拉远和拉近的运镜表现，总的来说锁定系统是依赖于运镜的系统，而一款游戏的运镜和视角，也是玩家体验感的最直观反馈，简单的经验告诉我们，相机里人物越近，玩家的沉浸感越深，但是视角的抖动，旋转带来的眩晕问题都会很明显，所以再花哨的fps游戏，也会严格限制玩家的移动方式，因此也不会出现第一人称的act游戏，而对第三人称而言，带来的叙事感能更好的帮助我们表现游戏剧情，帮助玩家理解和梳理剧情，并且如果相机比较远视野宽阔，就可以容纳更多更炫酷的技能和战斗系统，但是沉浸感就比较弱。所以不同游戏对两者都有不同的取舍，就像《战神4》和前作相比，放弃了比较传统的act远距离视角，大胆采用越肩视角，游戏中更是穿插大量的长镜头一镜到底等操作，是一次游戏电影化的尝试，引入了更多的运镜手法，而魂3或者说魂系列作为战神4的前辈，更多的是对除传统日式俯视角act以外的一次探索，而他也确实通过运镜视角的改变，带来了想要的体验感和boss压迫力，也给后辈留下许多参考，在次世代的游戏开发中有着更多的借鉴意义，因为现在设计一款相机运镜系统和锁定系统，肯定要考虑到更复杂的需求场景和画面的表现力，因此从风格鲜明的前人之作中吸取经验加以提炼不失为一种好方法。
+
+
+## 战神视角
+1. 玩法的改变，使用来美食act视角
